--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "bin": {
     "thanglongdoc": "bin/thanglongdoc"
   },
+  "preferGlobal": true,
   "name": "@thanglongtcd/thanglongdoc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
