--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "commander": "^8.0.0",
     "nodemon": "^2.0.12"
   },
-  "bin": "bin/thanglongdoc",
+  "bin": {
+    "thanglongdoc": "bin/thanglongdoc"
+  },
   "preferGlobal": true,
-  "name": "@thanglongtcd/thanglongdoc",
-  "version": "1.0.2",
+  "name": "thanglongdoc",
+  "version": "1.0.3",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
